extract common lifecycle