@@ -174,7 +174,6 @@
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.architecture=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.cli=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.compose=ALL-UNNAMED
-                        --add-opens wtf.metio.ilo/wtf.metio.ilo.factories=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.devcontainer=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.model=ALL-UNNAMED
                         --add-opens wtf.metio.ilo/wtf.metio.ilo.shell=ALL-UNNAMED
